# the-librarian

./: .dockerignore  .env.example  .gitattributes  .gitguardian.yaml  .gitignore  .pnpmfile.cjs  .prettierignore  AGENTS.md  AUTONOMOUS-BUILD-NOTES-26-05-21.md  AUTONOMOUS-BUILD-NOTES-26-05-23.md  AUTONOMOUS-BUILD-NOTES-26-05-25.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  SOUL.md  TODO.md  code-review-codex.md  compose.yaml  eslint.config.mjs  fly.toml  install.sh  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pull-and-restart.sh  tsconfig.base.json  tsconfig.json  vitest.config.ts
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.impeccable/: design.json
docker/: all-in-one.Dockerfile  dashboard.Dockerfile  docker-compose.yml  mcp-server.Dockerfile  supervisor.mjs
docs/: TODO.md  code-review-claude-2026-06-05.md  code-review-codex.md  code-review-merged-2026-06-05.md  harness-capture-capability.md  illustrations.md  release-runbook.md  release.md  slash-commands.md  tech-debt.md
integrations/: README.md
integrations/hermes/: AGENTS.append.md  README.md  pyproject.toml  requirements-dev.txt  slash-commands.md
integrations/hermes/librarian/: __init__.py  capture.py  capture_state.py  client.py  commands.py  plugin.yaml  provider.py
integrations/hermes/tests/: _helpers.py  conftest.py  test_capture.py  test_capture_state.py  test_client.py  test_commands.py  test_config.py  test_provider.py  test_schemas.py  test_sync_turn.py
src/: cli.js  (+5 more)
(+695 files in other folders)
